<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_categories"><!--APP START-->
<!--EN ESTE ARCHIVO SE GESTIONAN LOS LINKS DEL MENU A LOS FRAGMENTS-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.FragmentHome"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.proyecto.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_new_categories" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.example.proyecto.ui.emergency.FragmentEmergency"
        android:label="@string/menu_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.proyecto.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.proyecto.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>