<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_menu_emergency"
            android:title="@string/menu_emergency" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/menu_contact" />
        </menu>
    </item>

</menu>
