<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_categorias_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout_Title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorSecundary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextLight"
            android:text="@string/emergencyTitleSafe"
            android:textAlignment="center"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_ButtonsEmergency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_Title">

        <LinearLayout
            android:id="@+id/gridEmergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_Emergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_Emergency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_Emergency"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_Police"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_Police"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_Police"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_SocialServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_SocialServices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_SocialServices"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_FireFighter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_FireFighter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_FireFighter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_AddContact1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:id="@+id/Linearlayout_PlusAdd1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:padding="20dp"
                            android:src="@drawable/add" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout_CardAdd1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imageView_AddContact1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_AddContact1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_AddContact2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:id="@+id/LinearLayout_PlusAdd2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:padding="20dp"
                            android:src="@drawable/add" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout_CardAdd2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imageView_AddContact2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/architectureico" />

                        <TextView
                            android:id="@+id/textView_AddContact2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="Text"
                            android:textAlignment="center"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_Alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_Title">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:maxHeight="100dp"
                android:src="@drawable/advertencia"
                android:tint="@color/colorAlert" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/callPermission"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/callPermission1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_permissionsAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/callButton" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
